@@ -10,13 +10,12 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: binary.test,v 1.1 2000/03/02 04:08:35 mo Exp $
+# RCS: @(#) $Id: binary.test,v 1.2 2000/12/23 23:48:46 mdejong Exp $
 
-if {[string compare test [info procs test]] == 1} then {source defs}
-#if {[lsearch [namespace children] ::tcltest] == -1} {
-#    package require tcltest
-#    namespace import ::tcltest::*
-#}
+if {[lsearch [namespace children] ::tcltest] == -1} {
+    package require tcltest
+    namespace import -force ::tcltest::*
+}
 
 test binary-2.1 {DupByteArrayInternalRep} {
     set hdr [binary format cc 0 0316]
@@ -33,7 +32,7 @@ test binary-1.1 {Tcl_BinaryObjCmd: bad args} {
 } {1 {wrong # args: should be "binary option ?arg arg ...?"}}
 test binary-1.2 {Tcl_BinaryObjCmd: bad args} {
     list [catch {binary foo} msg] $msg
-} {1 {bad option "foo": must be format, or scan}}
+} {1 {bad option "foo": must be format or scan}}
 
 test binary-1.3 {Tcl_BinaryObjCmd: format error} {
     list [catch {binary f} msg] $msg
@@ -1460,10 +1459,10 @@ test binary-41.8 {ScanNumber: word alignment} {nonPortable pcOnly} {
 test binary-42.1 {Tcl_BinaryObjCmd: bad arguments} {} {
     catch {binary ""} result
     set result
-} {bad option "": must be format, or scan}
+} {bad option "": must be format or scan}
 
 # cleanup
-#::tcltest::cleanupTests
+::tcltest::cleanupTests
 return
 
 
